pages/apim/3.x/installation-guide/installation-guide-docker_images.adoc
= Docker
:page-sidebar: apim_3_x_sidebar
:page-permalink: apim/3.x/apim_installguide_docker_images.html
:page-folder: apim/installation-guide/docker
:page-layout: apim3x
:docker-image-src: https://raw.githubusercontent.com/gravitee-io/gravitee-docker/master/images
:github-repo: https://github.com/gravitee-io/gravitee-docker
:docker-hub: https://hub.docker.com/r/graviteeio

IMPORTANT: We assume that you are familiar with Docker. +
To run our official images, you must start by installing https://docs.docker.com/installation/[Docker]

Gravitee.io docker images are https://hub.docker.com/u/graviteeio/[available on Docker Hub].

We provide a complete set of images.

== Images
|===
|Image name |Version |Base

|{docker-hub}/apim-gateway/[graviteeio/apim-gateway]
|latest
|https://hub.docker.com/r/adoptopenjdk/openjdk11[openjdk11:jre-11.0.7_10-alpine]

|{docker-hub}/apim-management-api/[graviteeio/apim-management-api]
|latest
|https://hub.docker.com/r/adoptopenjdk/openjdk11[openjdk11:jre-11.0.7_10-alpine]

|{docker-hub}/apim-management-ui/[graviteeio/apim-management-ui]
|latest
|https://hub.docker.com/_/nginx/[nginx:1.18-alpine]

|{docker-hub}/apim-portal-ui/[graviteeio/apim-portal-ui]
|latest
|https://hub.docker.com/_/nginx/[nginx:1.18-alpine]

|===


=== graviteeio/apim-gateway

The API gateway image provides a set of environment variables which could be used to tune your container.
Because mongoDB is our default repository, you can replace default mongoDB address (`localhost:27017`) by the one you provide (`GRAVITEEIO_MONGODB_HOST:GRAVITEEIO_MONGODB_PORT`).
The gateway image also use the elasticsearch reporter.
You can replace default ES address (`localhost:9300`) by the one you provide (`GRAVITEEIO_ELASTIC_HOST:GRAVITEEIO_ELASTIC_PORT`).

==== Run the image
[source, shell]
....
$ docker run  \
        --publish 82:8082  \
        --name gateway  \
        --detach  \
        graviteeio/apim-gateway:latest
....

==== Configure the container
If you want to override the default configuration for MongoDB, Elasticsearch and all other properties included in the `gravitee.yml` file,
you have to use environment variables. Please have a look to the API Gateway <<apim_installguide_gateway_configuration.adoc#environment_variables, configuration>> section.

Here is an example to set the mongodb connection:
[source, shell]
....
$ docker run  \
        --publish 82:8082  \
        --name gateway  \
        --env GRAVITEE_MANAGEMENT_MONGODB_URI=mongodb://username:password@mongohost:27017/dbname
        --detach  \
        graviteeio/apim-gateway:latest
....

=== graviteeio/apim-management-api

The management-api image provides a set of environment variables which could be used to tune your container. 
Because mongoDB is our default repository, you can replace default mongoDB address (`localhost:27017`) by the one you provide (`GRAVITEEIO_MONGODB_HOST:GRAVITEEIO_MONGODB_PORT`).
The management-api image also use the elasticsearch reporter.
You can replace default ES address (`localhost:9300`) by the one you provide (`GRAVITEEIO_ELASTIC_HOST:GRAVITEEIO_ELASTIC_PORT`).

==== Run the image
[source, shell]
....
$ docker run \
          --publish 81:8083 \
          --name management-api \
          --detach  \
          graviteeio/apim-management-api:latest
....

==== Configure the container
If you want to override the default configuration for MongoDB, Elasticsearch and all other properties included in the `gravitee.yml` file,
you have to use environment variables. Please have a look to the Management API <<apim_installguide_management_api_configuration.adoc#environment_variables, configuration>> section.

Here is an example to set the mongodb connection:
[source, shell]
....
$ docker run \
          --publish 81:8083 \
          --name management-api \
          --env GRAVITEE_MANAGEMENT_MONGODB_URI=mongodb://username:password@mongohost:27017/dbname
          --detach  \
          graviteeio/apim-management-api:latest
....

=== graviteeio/apim-management-ui

The management-ui image provides a set of environment variables which could be used to tune your container.
The UI need to know where the management-api is.
So you have to override `MGMT_API_URL` to specify where the management-api is running.

==== Run the image
[source, shell]
....
$ docker run \
        --publish 80:80 \
        --env MGMT_API_URL=http://localhost:81/management/organizations/DEFAULT/environments/DEFAULT \
        --name management-ui \
        --detach  \
        graviteeio/apim-management-ui:latest
....

=== graviteeio/apim-portal-ui

The portal-ui image provides a set of environment variables which could be used to tune your container.
The UI need to know where the management-api is.
So you have to override `PORTAL_API_URL` to specify where the management-api is running.

==== Run the image
[source, shell]
....
$ docker run \
        --publish 80:80 \
        --env PORTAL_API_URL=http://localhost:81/portal/environments/DEFAULT \
        --name portal-ui \
        --detach  \
        graviteeio/apim-portal-ui:latest
....
